examples/telecomp/ui/style.css
* {
    box-sizing: border-box;
}

html {
    height: 100%;
}

body {
    height: 100%;
    min-width: 640px;
    min-height: 128px;
    margin: 0;
    background: #8c8c8c;
}

a {
    color: #000;
}

#overscan {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#main {
    width: 640px;
    height: 128px;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 5px;
    background: #8c8c8c;
    font-family: monospace;
    color: #000;
}

#qr-button {
    position: absolute;
    right: 8px;
    top: 8px;
}

#qr-modal {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #000;
    z-index: 10;
}

#top-spacer {
    height: 10px;
}

#credits {
    font-family: sans-serif;
    font-size: 0.7em;
}

#credits > a {
    color: #606060;
    text-decoration: none;
}

#knobs {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    width: 90%;
    height: 100%;
    font-size: 0.9em;
}

.knob-box {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

g-knob {
    width: 48px;
    height: 48px;
    margin-bottom: 2px;
    --circle-color: #272727;
    --dot-off-color: #ffffff;
    --dot-on-color: #ffffff;
    --track-color: #777777;
}

#knob-attack {
    --value-color: #800000;
}

#knob-release {
    --value-color: #008001;
}

#knob-threshold {
    --value-color: #feff00;
}

#knob-ratio {
    --value-color: #1500ff;
}

#knob-knee {
    --value-color: #ff00ff;
}

#knob-slew {
    --value-color: #ff0200;
}

